# winerosetta

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: winerosetta.cpp  winerosetta.def
